--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Miniconda3\\envs\\entorno2Django\\python.exe"
+    "python.pythonPath": "C:\\Users\\USER\\miniconda3\\envs\\prueba\\python.exe"
 }
